# external-dns

./: .gitignore  BUILD.bazel  WORKSPACE  go.mod  go.sum
controller/: BUILD.bazel
endpoint/: BUILD.bazel
internal/testresources/: BUILD.bazel
internal/testutils/: BUILD.bazel
pkg/apis/externaldns/: BUILD.bazel
pkg/apis/externaldns/validation/: BUILD.bazel
pkg/tlsutils/: BUILD.bazel
plan/: BUILD.bazel
provider/: BUILD.bazel  linode.go  linode_test.go
registry/: BUILD.bazel
source/: BUILD.bazel
