load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

# gazelle:prefix github.com/kubernetes-incubator/external-dns
gazelle(
    name = "gazelle",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kubernetes-incubator/external-dns",
    visibility = ["//visibility:private"],
    deps = [
        "//controller:go_default_library",
        "//pkg/apis/externaldns:go_default_library",
        "//pkg/apis/externaldns/validation:go_default_library",
        "//plan:go_default_library",
        "//provider:go_default_library",
        "//registry:go_default_library",
        "//source:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth:go_default_library",
    ],
)

go_binary(
    name = "external-dns",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "external_dns_image",
    binary = ":external-dns",
)

container_push(
    name = "push",
    format = "Docker",
    image = ":external_dns_image",
    registry = "index.docker.io",
    repository = "vktrbrlv/external-dns",
    tag = "linux_amd64"
)