load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "alibaba_cloud.go",
        "aws.go",
        "aws_sd.go",
        "azure.go",
        "cloudflare.go",
        "coredns.go",
        "designate.go",
        "digital_ocean.go",
        "dnsimple.go",
        "domain_filter.go",
        "dyn.go",
        "exoscale.go",
        "google.go",
        "infoblox.go",
        "inmemory.go",
        "linode.go",
        "ns1.go",
        "oci.go",
        "pdns.go",
        "provider.go",
        "rcode0.go",
        "recordfilter.go",
        "rfc2136.go",
        "transip.go",
        "zone_id_filter.go",
        "zone_tag_filter.go",
        "zone_type_filter.go",
        "zonefinder.go",
    ],
    importpath = "github.com/kubernetes-incubator/external-dns/provider",
    visibility = ["//visibility:public"],
    deps = [
        "//endpoint:go_default_library",
        "//pkg/apis/externaldns:go_default_library",
        "//pkg/tlsutils:go_default_library",
        "//plan:go_default_library",
        "//source:go_default_library",
        "@com_github_aliyun_alibaba_cloud_sdk_go//sdk/requests:go_default_library",
        "@com_github_aliyun_alibaba_cloud_sdk_go//services/alidns:go_default_library",
        "@com_github_aliyun_alibaba_cloud_sdk_go//services/pvtz:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/credentials/stscreds:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/request:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/route53:go_default_library",
        "@com_github_aws_aws_sdk_go//service/servicediscovery:go_default_library",
        "@com_github_azure_azure_sdk_for_go//arm/dns:go_default_library",
        "@com_github_azure_go_autorest//autorest:go_default_library",
        "@com_github_azure_go_autorest//autorest/adal:go_default_library",
        "@com_github_azure_go_autorest//autorest/azure:go_default_library",
        "@com_github_azure_go_autorest//autorest/to:go_default_library",
        "@com_github_cloudflare_cloudflare_go//:go_default_library",
        "@com_github_coreos_etcd//clientv3:go_default_library",
        "@com_github_denverdino_aliyungo//metadata:go_default_library",
        "@com_github_digitalocean_godo//:go_default_library",
        "@com_github_digitalocean_godo//context:go_default_library",
        "@com_github_dnsimple_dnsimple_go//dnsimple:go_default_library",
        "@com_github_exoscale_egoscale//:go_default_library",
        "@com_github_ffledgling_pdns_go//:go_default_library",
        "@com_github_gophercloud_gophercloud//:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/dns/v2/recordsets:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/dns/v2/zones:go_default_library",
        "@com_github_gophercloud_gophercloud//pagination:go_default_library",
        "@com_github_infobloxopen_infoblox_go_client//:go_default_library",
        "@com_github_linki_instrumented_http//:go_default_library",
        "@com_github_linode_linodego//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
        "@com_github_nesv_go_dynect//dynect:go_default_library",
        "@com_github_nic_at_rc0go//:go_default_library",
        "@com_github_oracle_oci_go_sdk//common:go_default_library",
        "@com_github_oracle_oci_go_sdk//dns:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sanyu_dynectsoap//dynectsoap:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_transip_gotransip//:go_default_library",
        "@com_github_transip_gotransip//domain:go_default_library",
        "@com_google_cloud_go//compute/metadata:go_default_library",
        "@in_gopkg_ns1_ns1_go_v2//rest:go_default_library",
        "@in_gopkg_ns1_ns1_go_v2//rest/model/dns:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_golang_google_api//dns/v1:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "alibaba_cloud_test.go",
        "aws_sd_test.go",
        "aws_test.go",
        "azure_test.go",
        "cloudflare_test.go",
        "coredns_test.go",
        "designate_test.go",
        "digital_ocean_test.go",
        "dnsimple_test.go",
        "domain_filter_test.go",
        "dyn_test.go",
        "exoscale_test.go",
        "google_test.go",
        "infoblox_test.go",
        "inmemory_test.go",
        "linode_test.go",
        "ns1_test.go",
        "oci_test.go",
        "pdns_test.go",
        "provider_test.go",
        "rcode0_test.go",
        "recordfilter_test.go",
        "rfc2136_test.go",
        "transip_test.go",
        "zone_id_filter_test.go",
        "zone_tag_filter_test.go",
        "zone_type_filter_test.go",
        "zonefinder_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//endpoint:go_default_library",
        "//internal/testutils:go_default_library",
        "//plan:go_default_library",
        "@com_github_aliyun_alibaba_cloud_sdk_go//services/alidns:go_default_library",
        "@com_github_aliyun_alibaba_cloud_sdk_go//services/pvtz:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//service/route53:go_default_library",
        "@com_github_aws_aws_sdk_go//service/servicediscovery:go_default_library",
        "@com_github_azure_azure_sdk_for_go//arm/dns:go_default_library",
        "@com_github_azure_go_autorest//autorest:go_default_library",
        "@com_github_azure_go_autorest//autorest/azure:go_default_library",
        "@com_github_azure_go_autorest//autorest/to:go_default_library",
        "@com_github_cloudflare_cloudflare_go//:go_default_library",
        "@com_github_digitalocean_godo//:go_default_library",
        "@com_github_digitalocean_godo//context:go_default_library",
        "@com_github_dnsimple_dnsimple_go//dnsimple:go_default_library",
        "@com_github_exoscale_egoscale//:go_default_library",
        "@com_github_ffledgling_pdns_go//:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/dns/v2/recordsets:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/dns/v2/zones:go_default_library",
        "@com_github_infobloxopen_infoblox_go_client//:go_default_library",
        "@com_github_linode_linodego//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
        "@com_github_nesv_go_dynect//dynect:go_default_library",
        "@com_github_nic_at_rc0go//:go_default_library",
        "@com_github_oracle_oci_go_sdk//common:go_default_library",
        "@com_github_oracle_oci_go_sdk//dns:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@com_github_transip_gotransip//domain:go_default_library",
        "@in_gopkg_ns1_ns1_go_v2//rest:go_default_library",
        "@in_gopkg_ns1_ns1_go_v2//rest/model/dns:go_default_library",
        "@org_golang_google_api//dns/v1:go_default_library",
        "@org_golang_google_api//googleapi:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
