load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "aws_sd_registry.go",
        "noop.go",
        "registry.go",
        "txt.go",
    ],
    importpath = "github.com/kubernetes-incubator/external-dns/registry",
    visibility = ["//visibility:public"],
    deps = [
        "//endpoint:go_default_library",
        "//plan:go_default_library",
        "//provider:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "aws_sd_registry_test.go",
        "noop_test.go",
        "txt_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//endpoint:go_default_library",
        "//internal/testutils:go_default_library",
        "//plan:go_default_library",
        "//provider:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
