load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cloudfoundry.go",
        "compatibility.go",
        "connector.go",
        "crd.go",
        "dedup_source.go",
        "empty.go",
        "fake.go",
        "gateway.go",
        "ingress.go",
        "multi_source.go",
        "service.go",
        "source.go",
        "store.go",
    ],
    importpath = "github.com/kubernetes-incubator/external-dns/source",
    visibility = ["//visibility:public"],
    deps = [
        "//endpoint:go_default_library",
        "@com_github_cloudfoundry_community_go_cfclient//:go_default_library",
        "@com_github_linki_instrumented_http//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_istio_api//networking/v1alpha3:go_default_library",
        "@io_istio_istio//pilot/pkg/config/kube/crd:go_default_library",
        "@io_istio_istio//pilot/pkg/model:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_api//extensions/v1beta1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_client_go//informers:go_default_library",
        "@io_k8s_client_go//informers/core/v1:go_default_library",
        "@io_k8s_client_go//informers/extensions/v1beta1:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cloudfoundry_test.go",
        "connector_test.go",
        "crd_test.go",
        "dedup_source_test.go",
        "empty_test.go",
        "fake_test.go",
        "gateway_test.go",
        "ingress_test.go",
        "multi_source_test.go",
        "service_test.go",
        "shared_test.go",
        "source_test.go",
        "store_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//endpoint:go_default_library",
        "//internal/testutils:go_default_library",
        "@com_github_cloudfoundry_community_go_cfclient//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@io_istio_api//networking/v1alpha3:go_default_library",
        "@io_istio_istio//pilot/pkg/model:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_api//extensions/v1beta1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/fake:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//rest/fake:go_default_library",
    ],
)
