load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "endpoint.go",
        "mock_source.go",
    ],
    importpath = "github.com/kubernetes-incubator/external-dns/internal/testutils",
    visibility = ["//:__subpackages__"],
    deps = [
        "//endpoint:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["endpoint_test.go"],
    embed = [":go_default_library"],
    deps = ["//endpoint:go_default_library"],
)
