load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["validation.go"],
    importpath = "github.com/kubernetes-incubator/external-dns/pkg/apis/externaldns/validation",
    visibility = ["//visibility:public"],
    deps = ["//pkg/apis/externaldns:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["validation_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/externaldns:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
